--- a/boards/shields/pain27/pain27-layouts.dtsi
+++ b/boards/shields/pain27/pain27-layouts.dtsi
@@ -1,1 +1,42 @@
+#include <physical_layouts.dtsi>
 
+/ {
+    layout_pain27: layout_pain27 {
+        compatible = "zmk,physical-layout";
+        display-name = "Pain27";
+        transform = <&default_transform>;
+        kscan = <&kscan0>;
+        keys  //                       w   h    x    y     rot    rx    ry
+            = <&key_physical_attrs 100 100    0    0       0     0     0>
+            , <&key_physical_attrs 100 100  100    0       0     0     0>
+            , <&key_physical_attrs 100 100  200    0       0     0     0>
+            , <&key_physical_attrs 100 100  300    0       0     0     0>
+            , <&key_physical_attrs 100 100  400    0       0     0     0>
+            , <&key_physical_attrs 100 100  500    0       0     0     0>
+            , <&key_physical_attrs 100 100  600    0       0     0     0>
+            , <&key_physical_attrs 100 100  700    0       0     0     0>
+            , <&key_physical_attrs 100 100  800    0       0     0     0>
+            , <&key_physical_attrs 100 100  900    0       0     0     0>
+
+            , <&key_physical_attrs 100 100   25  100       0     0     0>
+            , <&key_physical_attrs 100 100  125  100       0     0     0>
+            , <&key_physical_attrs 100 100  225  100       0     0     0>
+            , <&key_physical_attrs 100 100  325  100       0     0     0>
+            , <&key_physical_attrs 100 100  425  100       0     0     0>
+            , <&key_physical_attrs 100 100  525  100       0     0     0>
+            , <&key_physical_attrs 100 100  625  100       0     0     0>
+            , <&key_physical_attrs 100 100  725  100       0     0     0>
+            , <&key_physical_attrs 100 100  825  100       0     0     0>
+
+            , <&key_physical_attrs 100 100   75  200       0     0     0>
+            , <&key_physical_attrs 100 100  175  200       0     0     0>
+            , <&key_physical_attrs 100 100  275  200       0     0     0>
+            , <&key_physical_attrs 100 100  375  200       0     0     0>
+            , <&key_physical_attrs 100 100  475  200       0     0     0>
+            , <&key_physical_attrs 100 100  575  200       0     0     0>
+            , <&key_physical_attrs 100 100  675  200       0     0     0>
+
+            , <&key_physical_attrs 700 100  225  300       0     0     0>
+            ;
+    };
+};
